Upscaling: Added py, pz to get upscaling working in 3D

--- a/epoch1d/Makefile
+++ b/epoch1d/Makefile
@@ -215,7 +215,7 @@ DEFINES := $(DEFINE)
 #DEFINES += $(D)PARTICLE_ID4
 
 # Include QED routines
-#DEFINES += $(D)PHOTONS
+DEFINES += $(D)PHOTONS
 
 # Use the Trident process for pair production
 #DEFINES += $(D)TRIDENT_PHOTONS
