Upscaling: Added pair upscaling to Bethe-Heitler pair production in epoch1d.

--- a/epoch1d/Makefile
+++ b/epoch1d/Makefile
@@ -221,7 +221,7 @@ DEFINES += $(D)PHOTONS
 #DEFINES += $(D)TRIDENT_PHOTONS
 
 # Include bremsstrahlung routines
-#DEFINES += $(D)BREMSSTRAHLUNG
+DEFINES += $(D)BREMSSTRAHLUNG
 
 # Use Intel-specific 'mm_prefetch' calls to load next particle in the list
 # into cache ahead of time. Gives ~10% speed-up with Intel 12 compilers.
